# neuropetrix

./: .gitignore  Makefile  README.md  START_COMMAND.txt  main.py  package.json  requirements.txt  vercel.json
apps/desktop/01_ACTIVE_SYSTEMS/neuropetrix_3_ACTIVE/: .gitignore  .np_root  App.tsx  DEMO_SCRIPT_20250905.md  DEPLOYMENT_GUIDE.md  Dockerfile  GUNCEL_SISTEM_DURUMU_20250904.md  NEUROPETRIX_GEMINI_INTEGRATION_PLAN_20250905.md  README.md  README_PRODUCTION.md  SISTEM_GUNCELLEME_20250904.md  SISTEM_TAMAMLANDI_20250904.md  SYSTEM_ANALYSIS_REPORT.md  YARIN_ICIN_PLANLAR_20250905.md  deploy.sh  deploy_simple.sh  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.simple.yml  docker-compose.yaml  docker-compose.yml  env.example  env_example.txt  index.css  index.html  package-lock.json  package.json  performance_monitor.py  pyproject.toml  render.yaml  start_system.sh  system_monitor.py  system_report_20250829_234722.json  system_report_20250901_225821.json  test_scenarios.py  tsnm_report_20250817_042205.json  tsnm_report_20250817_043459.json  tsnm_report_20250817_043931.json  types.ts  v0_prompts.md
apps/desktop/01_ACTIVE_SYSTEMS/neuropetrix_3_ACTIVE/app/: page.tsx
apps/desktop/01_ACTIVE_SYSTEMS/neuropetrix_3_ACTIVE/backend/: database_workflow.py  main.py  main_fixed.py  main_working.py  monitoring.py  post_process.py  requirements-test.txt  uvicorn.out
apps/desktop/01_ACTIVE_SYSTEMS/neuropetrix_3_ACTIVE/components/: AdvancedSUVTrend.tsx  CaseDetailView.tsx  ClinicalFeedback.tsx  DICOMViewer.tsx  Dashboard.tsx  DesktopRunner.tsx  DictationMic.tsx  EnhancedPICOAutomation.tsx  GeminiAIStudio.tsx  LoadingSpinner.tsx  MultimodalFusion.tsx  NewCaseModal.tsx  PETReportStudio.tsx  PICOAutomation.tsx  PatientManagement.tsx  ResponsiveGrid.tsx  SUVTrendAnalysis.tsx  SUVTrendChart.tsx  ScriptManagement.tsx  SystemMonitor.tsx  SystemMonitoring.tsx  health-badge.tsx
apps/desktop/01_ACTIVE_SYSTEMS/neuropetrix_3_ACTIVE/frontend/: README.md  env.production  package-lock 2.json
apps/desktop/01_ACTIVE_SYSTEMS/neuropetrix_3_ACTIVE/lib/: api.ts
apps/desktop/01_ACTIVE_SYSTEMS/neuropetrix_3_ACTIVE/monitoring/: prometheus.yml
apps/desktop/01_ACTIVE_SYSTEMS/neuropetrix_3_ACTIVE/neuropetrix_working_system_20250824_004704/: start_system.sh
apps/desktop/01_ACTIVE_SYSTEMS/neuropetrix_3_ACTIVE/scripts/: check_env.py  check_loggers.py  run.sh
apps/desktop/01_ACTIVE_SYSTEMS/neuropetrix_3_ACTIVE/services/: aiService.ts  api.ts  dicomService.ts  mockApiService.ts
apps/desktop/01_ACTIVE_SYSTEMS/neuropetrix_3_ACTIVE/tests/: smoke.sh
(+399 files in other folders)
